--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ilya Piven | QA Engineer</title>
-  <style>
-    body { font-family: Arial, sans-serif; max-width: 800px; margin: 2em auto; line-height: 1.6; padding: 0 1em; }
-    h1, h2 { color: #333; }
-    ul { padding-left: 1.2em; }
-    .section { margin-top: 2em; }
-    .contact { margin-bottom: 1em; font-style: italic; }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Ilya Piven</h1>
