--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
   <div class="section">
     <h2>Education</h2>
     <ul>
-      <li>Master’s Degree – Radio Engineering, State University of Telecommunications (2019–2021)</li>
-      <li>Bachelor’s Degree – Information and Telecommunication Networks, DUT (2015–2019)</li>
+      <li>Master, “DUT”, “StateUniversity of Telecommunications” faculty, direction “Radio Engineering” (2019–2021)</li>
+      <li>Bachelor, “DUT”, “StateUniversity of Telecommunications” faculty, direction “Information and Telecommunication Networks” (2015–2019)</li>
     </ul>
   </div>
 
   <div class="section">
     <h2>Courses & Certifications</h2>
     <ul>
-      <li>HPE ATA – Networks (2017)</li>
+      <li>HP ATA – Networks (2017)</li>
       <li>HP ATA – Connected Devices (2016)</li>
     </ul>
   </div>
