--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <body>
   <div class="container">
     <aside class="sidebar">
-      <img src="image1" alt="Profile picture" class="avatar">
+      <img src="blob:https://web.telegram.org/f20751a2-d8d9-4992-b6c0-f84368733fa8" alt="Profile picture" class="avatar">
       <div class="name">Ilya Piven</div>
       <div class="position">QA Engineer</div>
       <div class="section-title">Details</div>
