--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <body>
   <div class="container">
     <aside class="sidebar">
-      <img src="blob:https://web.telegram.org/f20751a2-d8d9-4992-b6c0-f84368733fa8" alt="Profile picture" class="avatar">
+      <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/32eaff74e7f84aec9583a46c4a3db106_9366/inter-miami-cf-25-26-messi-home-authentic-jersey.jpg" alt="Profile picture" class="avatar">
       <div class="name">Ilya Piven</div>
       <div class="position">QA Engineer</div>
       <div class="section-title">Details</div>
