--- a/index.html
+++ b/index.html
@@ -5,21 +5,173 @@
   <title>Ilya Piven - QA Engineer Resume</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
-   
+    body {
+      background: #f5f5f5;
+      font-family: 'Montserrat', Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 900px;
+      margin: 24px auto;
+      background: #fff;
+      display: flex;
+      box-shadow: 0px 4px 32px rgba(0,0,0,0.08);
+    }
+    .sidebar {
+      background: #222b34;
+      color: #fff;
+      width: 270px;
+      min-height: 100vh;
+      padding: 32px 24px;
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .avatar {
+      width: 110px;
+      height: 110px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 18px;
+      border: 4px solid #fff;
+      background: #d9d9d9;
+    }
+    .name {
+      font-size: 1.5rem;
+      font-weight: 700;
+      margin-bottom: 6px;
+      text-align: center;
+    }
+    .position {
+      font-size: 1rem;
+      letter-spacing: 2px;
+      margin-bottom: 22px;
+      text-align: center;
+      color: #c6c6c6;
+      font-weight: 400;
+    }
+    .section-title {
+      font-size: 1.15rem;
+      letter-spacing: 1px;
+      font-weight: 700;
+      margin: 30px 0 10px;
+      text-align: left;
+    }
+    .details-title {
+      font-size: 1.15rem;
+      letter-spacing: 1px;
+      font-weight: 700;
+      margin: 30px 0 10px;
+      text-align: center;
+    }
+    .details, .languages {
+      width: 100%;
+    }
+    .details-info {
+      font-size: 0.95rem;
+      line-height: 1.6;
+      margin-bottom: 20px;
+    }
+    .details-info a {
+      color: #aad8ff;
+      text-decoration: none;
+    }
+    .languages-list {
+      margin-top: 10px;
+      font-size: 0.97rem;
+    }
+    .lang-label {
+      font-weight: 500;
+      display: flex;
+      margin-bottom: 8px;
+      justify-content: space-between;
+    }
+    .lang-bar {
+      background: #16202a;
+      height: 7px;
+      border-radius: 4px;
+      overflow: hidden;
+      margin-bottom: 14px;
+    }
+    .lang-bar-inner {
+      height: 100%;
+      border-radius: 4px;
+      background: #aad8ff;
+    }
+    .lang-english {
+      font-size: 0.485rem;
+    }
+    /* Main content */
+    .main {
+      flex: 1;
+      padding: 40px 45px 40px 45px;
+      color: #181818;
+      background: #fff;
+      font-size: 1rem;
+      line-height: 1.7;
+    }
+    .main h2, .main h3 {
+      margin-top: 24px;
+      margin-bottom: 10px;
+      font-weight: 700;
+    }
+    .main ul {
+      margin-top: 8px;
+      margin-bottom: 16px;
+      padding-left: 22px;
+    }
+    .main ul li {
+      margin-bottom: 6px;
+    }
+    .main strong {
+      font-weight: 700;
+    }
+    .job-title {
+      font-weight: 700;
+      font-size: 1.1rem;
+      margin-bottom: 2px;
+    }
+    .job-period {
+      font-size: 0.97rem;
+      font-weight: 400;
+      color: #222b34;
+    }
+    .job-projects {
+      font-size: 0.95rem;
+      font-weight: 500;
+      margin-bottom: 3px;
+    }
+    .job-tools {
+      font-size: 0.93rem;
+      color: #444;
+      margin-bottom: 5px;
+      font-style: italic;
+    }
+    @media (max-width: 900px) {
+      .container { flex-direction: column; }
+      .sidebar { width: 100%; min-height: 0; padding: 24px 8vw; }
+      .main { padding: 32px 6vw; }
+    }
+    @media (max-width: 600px) {
+      .main { padding: 24px 2vw; }
+      .sidebar { padding: 22px 2vw; }
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <aside class="sidebar">
-      <img src="https://drive.google.com/file/d/1-WAQNDRS9WhB-OwLSX5QZVABmwvMRjE0/view?usp=sharing" alt="Profile picture" class="avatar">
+      <img src="image1" alt="Profile picture" class="avatar">
       <div class="name">Ilya Piven</div>
       <div class="position">QA Engineer</div>
-      <div class="section-title">Details</div>
+      <div class="details-title">Details</div>
       <div class="details">
         <div class="details-info">
           Kyiv, Ukraine<br>
           +38(093)115-46-19<br>
-          <a href="mailto:Ilya.piven98@gmail.com">Ilya.piven98@gmail.com</a><br>
+          <a href="mailto:Ilya.piven95@gmail.com">Ilya.piven95@gmail.com</a><br>
           Date of Birth: 13.01.1998
         </div>
       </div>
@@ -29,7 +181,7 @@
           <span>Ukrainian/Russian</span>
         </div>
         <div class="lang-bar"><div class="lang-bar-inner" style="width: 100%"></div></div>
-        <div class="lang-label">
+        <div class="lang-label lang-english">
           <span>English</span>
         </div>
         <div class="lang-bar"><div class="lang-bar-inner" style="width: 72%"></div></div>
