--- a/index.html
+++ b/index.html
@@ -57,14 +57,6 @@
       letter-spacing: 1px;
       font-weight: 700;
       margin: 30px 0 10px;
-      text-align: left;
-    }
-    .details-title {
-      font-size: 1.15rem;
-      letter-spacing: 1px;
-      font-weight: 700;
-      margin: 30px 0 10px;
-      text-align: center;
     }
     .details, .languages {
       width: 100%;
@@ -99,9 +91,6 @@
       height: 100%;
       border-radius: 4px;
       background: #aad8ff;
-    }
-    .lang-english {
-      font-size: 0.485rem;
     }
     /* Main content */
     .main {
@@ -166,7 +155,7 @@
       <img src="image1" alt="Profile picture" class="avatar">
       <div class="name">Ilya Piven</div>
       <div class="position">QA Engineer</div>
-      <div class="details-title">Details</div>
+      <div class="section-title">Details</div>
       <div class="details">
         <div class="details-info">
           Kyiv, Ukraine<br>
@@ -181,7 +170,7 @@
           <span>Ukrainian/Russian</span>
         </div>
         <div class="lang-bar"><div class="lang-bar-inner" style="width: 100%"></div></div>
-        <div class="lang-label lang-english">
+        <div class="lang-label">
           <span>English</span>
         </div>
         <div class="lang-bar"><div class="lang-bar-inner" style="width: 72%"></div></div>
