--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <body>
   <div class="container">
     <aside class="sidebar">
-      <img src="image1" alt="Profile picture" class="avatar">
+      <img src="https://drive.google.com/file/d/1-WAQNDRS9WhB-OwLSX5QZVABmwvMRjE0/view" alt="Profile picture" class="avatar">
       <div class="name">Ilya Piven</div>
       <div class="position">QA Engineer</div>
       <div class="section-title">Details</div>
