--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <body>
   <div class="container">
     <aside class="sidebar">
-      <img src="https://drive.google.com/file/d/1-WAQNDRS9WhB-OwLSX5QZVABmwvMRjE0/view" alt="Profile picture" class="avatar">
+      <img src="https://drive.google.com/uc?export=view&id=1-WAQNDRS9WhB-OwLSX5QZVABmwvMRjE0" alt="Profile picture" class="avatar">
       <div class="name">Ilya Piven</div>
       <div class="position">QA Engineer</div>
       <div class="section-title">Details</div>
@@ -173,7 +173,7 @@
         <div class="lang-label">
           <span>English</span>
         </div>
-        <div class="lang-bar"><div class="lang-bar-inner" style="width: 72%"></div></div>
+        <div class="lang-bar"><div class="lang-bar-inner" style="width: 50%"></div></div>
       </div>
     </aside>
     <main class="main">
